@@ -5,7 +5,7 @@
 # behavior not defined for horizons with an indefinate lower boundary
 
 ## basic function
-plotSPC <- function(x, color='soil_color', width=0.2, name='name', cex.names=0.5, cex.depth.axis=cex.names, cex.id=cex.names+(0.2*cex.names), print.id=TRUE, id.style='top', plot.order=1:length(x), add=FALSE, scaling.factor=1, y.offset=0, max.depth=max(x), n.depth.ticks=5, shrink=FALSE, shrink.cutoff=3, abbr=FALSE, abbr.cutoff=5, ...) {
+plotSPC <- function(x, color='soil_color', width=0.2, name='name', cex.names=0.5, cex.depth.axis=cex.names, cex.id=cex.names+(0.2*cex.names), print.id=TRUE, id.style='top', plot.order=1:length(x), add=FALSE, scaling.factor=1, y.offset=0, max.depth=max(x), n.depth.ticks=5, shrink=FALSE, shrink.cutoff=3, abbr=FALSE, abbr.cutoff=5, divide.hz=TRUE, ...) {
   
   # get horizons
   h <- horizons(x)
@@ -70,9 +70,21 @@ plotSPC <- function(x, color='soil_color', width=0.2, name='name', cex.names=0.5
 	  y0 <- (this_profile_data[, bcol] * scaling.factor) + y.offset
 	  y1 <- (this_profile_data[, tcol] * scaling.factor) + y.offset
 	  
-	  # make rectangles (horizons)
-	  rect(i-width, y0, i + width, y1, col=this_profile_colors)
-  
+	  # create horizons + colors
+    # default are filled rectangles
+    if(divide.hz)
+	    rect(i-width, y0, i + width, y1, col=this_profile_colors, border=NULL)
+    
+    # otherwise, we only draw the left, top, right borders, and then fill
+    else {
+      rect(i-width, y0, i + width, y1, col=this_profile_colors, border=NA)
+      segments(i-width, y0, i-width, y1) # left-hand side
+      segments(i+width, y0, i+width, y1) # right-rand side
+      segments(i-width, min(y1), i+width, min(y1)) # profile top
+      segments(i-width, max(y0), i+width, max(y0)) # profile bottom
+    }
+      
+    
 	  # annotate with names
 	  # first get the horizon mid-point
 	  mid <- ( y1 + y0 )/2
