@@ -1,6 +1,8 @@
 -------------------------- aqp 0.99-9.1 (2011-12-27) --------------------------
 * pedonPC, NASIS, and SDA functions moved *out* of aqp, and *into* new package: soilDB
   - removed assocated, suggested packages from aqp
+* new argument to plot(SoilProfileCollection, ..., divide.hz=TRUE|FALSE) tha can optionally suppress 
+  plotting of dividing lines between horizons (suggested by Ludwig Hilger)
 
 -------------------------- aqp 0.99-9 (2011-12-22) --------------------------
 * almost ready for AQP 1.0, vignettes are the last missing piece :)
